Skip to content

Qt: tabbing on 'force update' button of sync effects panel does not switch focus.

If you use the tab key to moves focus around within the effects dialog, if doing so within the synchronisation panel, once it reached the 'force update' button, it gets stuck and won't switch focus to anything else unless you click on something else. Essentially it's capturing and consuming the tab keypress event.

(As raised in discussion of #25896.)

Edited by Lyndon Brown
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information